[workspace]
members = [
    "asdb",
    "asdb-models",
    "asdb-builder",
    "config",
    "geocoding",
    "asmap/frontend",
    "asmap/server",
    "asmap/protocol",
    "test-context",
    "leaflet-markercluster",
    "asmap-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Piotr Konkol"]
repository = "https://github.com/pkonkol/asmap-rs"
license = "MIT"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = "1.48"
ipnetwork = "0.18"
mongodb = "2.8"
thiserror = "1.0"
csv = "1.4"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
bincode = "1.3"
futures = "0.3"
itertools = "0.11"
leaflet = "0.2"
rand = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
