[workspace]
members = [
    "asdb",
    "asdb-models",
    "asdb-builder",
    "config",
    "geocoding",
    "asmap/server",
    "asmap/protocol",
    "test-context",
    "leaflet-markercluster",
    "asmap-cli",
    "asmap/frontend-ts/wasm-protocol",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Piotr Konkol"]
repository = "https://github.com/pkonkol/asmap-rs"
license = "MIT"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = "1.48"
ipnetwork = { version = "0.21", features = ["serde"] }
mongodb = "3.4"
thiserror = "2.0"
csv = "1.4"
indicatif = "0.18"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
bincode = "1.3"
futures = "0.3"
itertools = "0.14"
leaflet = "0.5"
rand = "0.9"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
