[package]
name = "asdb-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
maxminddb = "0.23.0"
mongodb = { workspace = true }
ipnetwork = { workspace = true }
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
asdb = { path = "../asdb" }
asdb-models = { path = "../asdb-models" }
test-context = { path = "../test-context" }
isocountry = "0.3.2"
thiserror = { workspace = true }
trauma = "2.2.4"
csv = "1.3.0"
reqwest = "0.11.22"
itertools = "0.11.0"
indicatif = "0.17.7"

[dev-dependencies]
ctor = "0.2.0"
futures = "0.3.28"
