[package]
name = "asdb-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
maxminddb = "0.23"
mongodb = { workspace = true }
ipnetwork = { workspace = true }
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
asdb = { path = "../asdb" }
asdb-models = { path = "../asdb-models" }
test-context = { path = "../test-context" }
isocountry = "0.3"
thiserror = { workspace = true }
trauma = "2.2"
csv = { workspace = true }
reqwest = "0.11"
itertools = "0.11"
indicatif = { workspace = true }
graphql_client = "0.13"

[dev-dependencies]
ctor = "0.2"
futures = "0.3"
