[package]
name = "asdb-builder"
version = "0.1.0"
edition.workspace = true

[dependencies]
maxminddb = "0.27"
mongodb = { workspace = true }
ipnetwork = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
asdb = { path = "../asdb" }
asdb-models = { path = "../asdb-models" }
test-context = { path = "../test-context" }
isocountry = "0.3"
thiserror = { workspace = true }
trauma = "2.3"
csv = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
itertools = { workspace = true }
indicatif = { workspace = true }
graphql_client = "0.15"

[dev-dependencies]
ctor = "0.6"
futures = { workspace = true }
