[package]
name = "asdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.5.0"
tokio = {workspace = true}
geo-types = "0.7.9" 
futures = "0.3.28"
serde = {workspace = true}
# serde_json = {workspace = true}
asdb-models = { path = "../asdb-models" }
test-context = { path = "../test-context" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2.9", features = ["js"] }

[dev-dependencies]
ctor = "0.2.0"
