[package]
name = "asdbmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maxminddb = "0.23.0"
mongodb = "2.5.0"
ipnetwork = "0.18"
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
asdb = { path = "../asdb" }
isocountry = "0.3.2"

[dev-dependencies]
ctor = "0.2.0"