[package]
name = "asdbmaker"
version = "0.1.0"
edition = "2021"

[dependencies]
maxminddb = "0.23.0"
mongodb = "2.5.0"
ipnetwork = "0.18.0"
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
asdb = { path = "../asdb" }
asdb-models = { path = "../asdb-models" }
test-context = { path = "../test-context" }
isocountry = "0.3.2"

[dev-dependencies]
ctor = "0.2.0"
futures = "0.3.28"
