[package]
name = "leaflet-markercluster"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
leaflet = "0.2.2"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
