[package]
name = "leaflet-markercluster"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
leaflet = "0.2"
serde = { workspace = true, features = ["serde_derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = "0.3"
