[package]
name = "leaflet-markercluster"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = { workspace = true }
leaflet = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
web-sys = { workspace = true }
