[package]
name = "test-context"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.6.0"
rand = "0.8.5"
thiserror = "1.0.44"
tokio = { workspace = true, features = ["rt-multi-thread"] }
