[package]
name = "test-context"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { workspace = true }
rand = "0.8.5"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
