[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asdb-models = { path = "../../asdb-models" }
protocol = { path = "../protocol" }
leaflet-markercluster = { path = "../../leaflet-markercluster" }
console_error_panic_hook = "0.1"
gloo-console = "0.3"
gloo-net = { version = "0.4", features = ["json", "websocket"] }
gloo-utils = "0.2"
leaflet = "0.2"
log = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlAnchorElement", "console", "Window", "Document"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
futures = "0.3"
bincode = "1.3"
anyhow = "1.0"
serde-wasm-bindgen = "0.6"
serde = { workspace = true, features = ["serde_derive"] }
gloo-file = "0.3"
csv = { workspace = true }
wasm-timer = "0.2"
js-sys = "0.3"
celes = "2.4"
serde_json.workspace = true
rand = "0.8.5"
gloo-timers = "0.3.0"
gloo-worker = { version = "0.5.0", features = ["futures"] }
