[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asdb-models = { path = "../../asdb-models" }
protocol = { path = "../protocol" }
leaflet-markercluster = { path = "../../leaflet-markercluster" }
console_error_panic_hook = "0.1"
gloo-console = "0.3"
gloo-net = { version = "0.6", features = ["json", "websocket"] }
gloo-utils = "0.2"
leaflet = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { workspace = true, features = [
    "HtmlAnchorElement",
    "console",
    "Window",
    "Document",
] }
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
futures = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
serde-wasm-bindgen = "0.6"
serde = { workspace = true, features = ["serde_derive"] }
gloo-file = "0.3"
csv = { workspace = true }
wasm-timer = "0.2"
js-sys = { workspace = true }
celes = "2.6"
serde_json = { workspace = true }
rand = { workspace = true }
gloo-timers = "0.3"
gloo-worker = { version = "0.5", features = ["futures"] }
yew-agent = "0.4.0" # 0.3.0 doesn't build
