[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
asdb = { path = "../../asdb" }
asdb-models = { path = "../../asdb-models" }
config = { path = "../../config" }
protocol = { path = "../protocol" }
axum = { version = "0.6.2", features = ["ws"] }
axum-extra = { version = "0.6.0", features = ["spa"] }
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full", "cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.71"
bincode = "1.3.3"
