[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
asdb = { path = "../../asdb" }
asdb-models = { path = "../../asdb-models" }
config = { path = "../../config" }
protocol = { path = "../protocol" }
axum = { version = "0.6", features = ["ws"] }
axum-extra = { version = "0.6", features = ["spa"] }
clap = { workspace = true, features = ["derive"] }
log = "0.4"
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["full", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bincode = "1.3"
tower_governor = { version = "0.1.0", features = ["tracing"] }
