[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
asdb = { path = "../../asdb" }
asdb-builder = { path = "../../asdb-builder" }
asdb-models = { path = "../../asdb-models" }
config = { path = "../../config" }
protocol = { path = "../protocol" }
axum = { version = "0.8", features = ["ws"] }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = { workspace = true }
bincode = { workspace = true }
tower_governor = { version = "0.8", features = ["tracing"] }
governor = "0.10.4"
nonzero_ext = "0.3.0"
chrono = "0.4"
